tests/compile-fail/non_integer_base/all_defined.stderr
error[E0277]: the trait bound `MyInt: Bits` is not satisfied
   --> tests/compile-fail/non_integer_base/all_defined.rs:116:22
    |
116 |     struct Flags128: MyInt {
    |                      ^^^^^ the trait `Bits` is not implemented for `MyInt`
    |
note: required by a bound in `bitflags::BitFlags::Bits`
   --> src/bitflags_trait.rs
    |
    |     type Bits: Bits;
    |                ^^^^ required by this bound in `bitflags::BitFlags::Bits`

error[E0277]: the trait bound `MyInt: Bits` is not satisfied
   --> tests/compile-fail/non_integer_base/all_defined.rs:115:1
    |
115 | / bitflags! {
116 | |     struct Flags128: MyInt {
117 | |         const A = MyInt(0b0000_0001u8);
118 | |         const B = MyInt(0b0000_0010u8);
119 | |         const C = MyInt(0b0000_0100u8);
120 | |     }
121 | | }
    | |_^ the trait `Bits` is not implemented for `MyInt`
    |
    = note: this error originates in the macro `__impl_bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyInt: Bits` is not satisfied
   --> tests/compile-fail/non_integer_base/all_defined.rs:115:1
    |
115 | / bitflags! {
116 | |     struct Flags128: MyInt {
117 | |         const A = MyInt(0b0000_0001u8);
118 | |         const B = MyInt(0b0000_0010u8);
119 | |         const C = MyInt(0b0000_0100u8);
120 | |     }
121 | | }
    | |_^ the trait `Bits` is not implemented for `MyInt`
    |
    = note: this error originates in the macro `__impl_bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyInt: Bits` is not satisfied
   --> tests/compile-fail/non_integer_base/all_defined.rs:115:1
    |
115 | / bitflags! {
116 | |     struct Flags128: MyInt {
117 | |         const A = MyInt(0b0000_0001u8);
118 | |         const B = MyInt(0b0000_0010u8);
119 | |         const C = MyInt(0b0000_0100u8);
120 | |     }
121 | | }
    | |_^ the trait `Bits` is not implemented for `MyInt`
    |
    = note: this error originates in the macro `__impl_bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyInt: Bits` is not satisfied
   --> tests/compile-fail/non_integer_base/all_defined.rs:115:1
    |
115 | / bitflags! {
116 | |     struct Flags128: MyInt {
117 | |         const A = MyInt(0b0000_0001u8);
118 | |         const B = MyInt(0b0000_0010u8);
119 | |         const C = MyInt(0b0000_0100u8);
120 | |     }
121 | | }
    | |_^ the trait `Bits` is not implemented for `MyInt`
    |
    = note: this error originates in the macro `__impl_bitflags` (in Nightly builds, run with -Z macro-backtrace for more info)
